--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ background-color:  #01080e63;
     background-color: white;
     border-radius: 6px;
     margin: 15px;
+    font-size: 23px;
+    text-align: right;
+    padding-right: 6px;
     
     
   }
